@@ -1,12 +1,12 @@
 **************************************************
 * xhbenc.prg
-* $Id$
-* Test program for file encoding
+* $Id: xhbenc.prg,v 1.1 2004/02/02 10:10:24 andijahja Exp $
+* Test program for file encoding and decoding
 * UUEncode, Base64 and YYEncode
 *
 * Andi Jahja
 *
-* Must link hbcc.lib
+* Must link hbcc.lib and libmisc.lib
 //----------------------------------------------------------------------------//
 
 #include "directry.ch"
@@ -20,6 +20,7 @@ PROCEDURE MAIN()
    LOCAL nFault := 0
    LOCAL aOkey := { " Okay " }
 
+   SET CURSOR OFF
    CLEAR SCREEN
    IF Alert( "xHarbour File Encoding Tests",{" Continue "," Quit "},"N/W*" ) == 2
       restscreen(0,0,maxrow(),maxcol(),cScr)
@@ -30,7 +31,7 @@ PROCEDURE MAIN()
    Alert( 'Will UUEncode pp.prg to ~pp.uue.;Syntax: UUENCODE_FILE( "pp.prg", "~pp.uue" )',aOkey,"N/GR*" )
 
    IF ( nError := UUENCODE_FILE( "pp.prg", "~pp.uue" ) ) == 0 .AND. File( "~pp.uue" )
-      ShowResult( "~pp.uue" )
+      ShowResult( "~pp.uue", "UUE" )
    ELSE
       ShowError( @nFault, nError )
    ENDIF
@@ -39,7 +40,7 @@ PROCEDURE MAIN()
    Alert( 'Now will Base64_Encode pp.prg to ~pp.b64.;Syntax: B64ENCODE_FILE( "pp.prg", "~pp.b64" )',aOkey, "N/BG*" )
 
    IF ( nError := B64ENCODE_FILE( "pp.prg", "~pp.b64" ) ) == 0 .AND. File( "~pp.b64" )
-      ShowResult( "~pp.b64" )
+      ShowResult( "~pp.b64", "B64" )
    ELSE
       ShowError( @nFault, nError )
    ENDIF
@@ -48,7 +49,7 @@ PROCEDURE MAIN()
    Alert( 'Will YYEncode pp.prg to ~pp.yye.;Syntax: YYENCODE_FILE( "pp.prg", "~pp.yye" )',aOkey,"N/GR*" )
 
    IF ( nError := YYENCODE_FILE( "pp.prg", "~pp.yye" ) ) == 0 .AND. File( "~pp.yye" )
-      ShowResult( "~pp.yye" )
+      ShowResult( "~pp.yye", "YYE" )
    ELSE
       ShowError( @nFault, nError )
    ENDIF
@@ -57,7 +58,7 @@ PROCEDURE MAIN()
    ALert( 'Now Will UUEncode pp.prg to ~pp*.uue;with 2000 lines per chunk.;Syntax: UUENCODE_FILE_BY_CHUNK( "pp.prg", 2000, "~pp" )',aOkey, "W+/B" )
 
    IF ( nError := UUENCODE_FILE_BY_CHUNK( "pp.prg", 2000, "~pp" ) ) == 0
-      ShowResult( "~pp*.uue" )
+      ShowResult( "~pp*.uue", "UUE" )
    ELSE
       ShowError( @nFault, nError )
    ENDIF
@@ -66,7 +67,7 @@ PROCEDURE MAIN()
    Alert( 'Now Will Base64_Encode pp.prg to ~pp*.b64;with 2000 lines per chunk.;Syntax: B64ENCODE_FILE_BY_CHUNK( "pp.prg", 2000, "~pp" )',aOkey,"W+/G")
 
    IF ( nError := B64ENCODE_FILE_BY_CHUNK( "pp.prg", 2000, "~pp" ) ) == 0
-      ShowResult( "~pp*.b64" )
+      ShowResult( "~pp*.b64", "B64" )
    ELSE
       ShowError( @nFault, nError )
    ENDIF
@@ -75,7 +76,7 @@ PROCEDURE MAIN()
    Alert( 'Now Will YYEncode pp.prg to ~pp*.yye;with 1000 lines per chunk.;Syntax: YYENCODE_FILE_BY_CHUNK( "pp.prg", 1000, "~pp" )',aOkey,"W+/N")
 
    IF ( nError := YYENCODE_FILE_BY_CHUNK( "pp.prg", 1000, "~pp" ) ) == 0
-      ShowResult( "~pp*.yye" )
+      ShowResult( "~pp*.yye", "YYE" )
    ELSE
       ShowError( @nFault, nError )
    ENDIF
@@ -88,14 +89,56 @@ PROCEDURE MAIN()
    RETURN
 
 //----------------------------------------------------------------------------//
-STATIC PROCEDURE ShowResult( cFileMask )
+STATIC PROCEDURE ShowResult( cFileMask, cEncoding )
 
    LOCAL aFiles, aItem
+   LOCAL nDecoded := 0
+   LOCAL cSyntax
+   LOCAL aDecodedFiles := {}
 
    IF !Empty( aFiles := Directory( cFileMask ) )
       Alert( "Conversion succesful !", { " Okay " }, "N/W*" )
+
+      AEval( aFiles, { |e| AADD( aDecodedFiles, e[1] ) } )
+
       FOR EACH aItem IN aFiles
          View( aItem )
+      NEXT
+
+      CLEAR SCREEN
+
+      DO CASE
+      CASE cEncoding == "UUE"
+         cSyntax  := 'UUDECODE_FILE( aDecodedFiles, "result.txt" )'
+         Alert( "Now will decode the encoded files to 'result.txt';Syntax : " + cSyntax , { " Okay " }, "gr+/b" )
+         ? "Decoding in progress ......"
+         nDecoded := UUDECODE_FILE( aDecodedFiles, "result.txt" )
+      CASE cEncoding == "B64"
+         cSyntax  := 'B64DECODE_FILE( aDecodedFiles, "result.txt" )'
+         Alert( "Now will decode the encoded files to 'result.txt';Syntax : " + cSyntax , { " Okay " }, "gr+/b" )
+         ? "Decoding in progress ......"
+         nDecoded := B64DECODE_FILE( aDecodedFiles, "result.txt" )
+      CASE cEncoding == "YYE"
+         cSyntax  := 'YYDECODE_FILE( aDecodedFiles, "result.txt" )'
+         Alert( "Now will decode the encoded files to 'result.txt';Syntax : " + cSyntax , { " Okay " }, "gr+/b" )
+         ? "Decoding in progress ......"
+         nDecoded := YYDECODE_FILE( aDecodedFiles, "result.txt" )
+      ENDCASE
+
+      CLEAR SCREEN
+
+      IF nDecoded > 0
+         Alert( "Decoding successful;Bytes written = " + ltrim(str(nDecoded)),{" View "},"N/W*" )
+         IF !Empty( aDecodedFiles := Directory( "result.txt" ) )
+            FOR EACH aItem IN aDecodedFiles
+               View( aItem )
+            NEXT
+         ENDIF
+      ELSE
+         Alert( "Error in file decoding ...", { " Booo ..."})
+      ENDIF
+
+      FOR EACH aItem IN aFiles
          FErase( aItem[F_NAME] )
       NEXT
    ENDIF
